--- a/Makefile.linux
+++ b/Makefile.linux
@@ -64,14 +64,29 @@ endif
 endif
 
 install: all
-	install -d ${PREFIX}/bin ${PREFIX}/etc ${PREFIX}/etc/i2pd ${PREFIX}/etc/i2pd/tunnels.conf.d ${PREFIX}/usr ${PREFIX}/usr/share ${PREFIX}/usr/share/doc/i2pd ${PREFIX}/usr/share/i2pd ${PREFIX}/usr/share/man ${PREFIX}/usr/share/man/man1 ${PREFIX}/var/lib ${PREFIX}/var/lib/i2pd
-	install -m 755 ${I2PD} ${PREFIX}/bin/
-	install -m 644 contrib/i2pd.conf contrib/subscriptions.txt contrib/tunnels.conf ${PREFIX}/etc/i2pd
-	@cp -R contrib/certificates ${PREFIX}/usr/share/i2pd/
-	install -m 644 ChangeLog LICENSE README.md contrib/i2pd.conf contrib/subscriptions.txt contrib/tunnels.conf ${PREFIX}/usr/share/doc/i2pd
-	@gzip -kf debian/i2pd.1 && install debian/i2pd.1.gz ${PREFIX}/usr/share/man/man1
-	@ln -sf ${PREFIX}/usr/share/i2pd/certificates ${PREFIX}/var/lib/i2pd/
-	@ln -sf ${PREFIX}/etc/i2pd/tunnels.conf.d ${PREFIX}/var/lib/i2pd/tunnels.d
-	@ln -sf ${PREFIX}/etc/i2pd/i2pd.conf ${PREFIX}/var/lib/i2pd/i2pd.conf
-	@ln -sf ${PREFIX}/etc/i2pd/subscriptions.txt ${PREFIX}/var/lib/i2pd/subscriptions.txt
-	@ln -sf ${PREFIX}/etc/i2pd/tunnels.conf ${PREFIX}/var/lib/i2pd/tunnels.conf
+	prefix := /usr/local
+	datarootdir = $(prefix)/share
+	datadir = $(datarootdir)
+	exec_prefix = $(prefix)
+	sbindir = $(exec_prefix)/sbin
+	sysconfdir = $(prefix)/etc
+	docdir = $(datarootdir)/doc/${I2PD}
+	mandir = $(datarootdir)/man
+	man1dir = $(mandir)/man1
+	localstatedir = $(prefix)/var
+	locallibstatedir = $(localstatedir)/lib
+	runstatedir = $(localstatedir)/run
+
+	install -d $(exec_prefix) $(sbindir)
+	install -m 755 ${I2PD} $(sbindir)
+	install -d $(sysconfdir) $(sysconfdir)/${I2PD} $(sysconfdir)/${I2PD}/tunnels.conf.d
+	install -m 644 contrib/i2pd.conf contrib/subscriptions.txt contrib/tunnels.conf $(sysconfdir)/${I2PD}
+	install -d $(datarootdir) $(datarootdir)/doc $(docdir) $(datarootdir)/i2pd $(mandir) $(man1dir)
+	@cp -R contrib/certificates $(datarootdir)/${I2PD}/certificates
+	install -m 644 ChangeLog LICENSE README.md contrib/i2pd.conf contrib/subscriptions.txt contrib/tunnels.conf $(docdir)
+	@gzip -kf debian/i2pd.1 && install debian/i2pd.1.gz $(man1dir)
+	install -d $(localstatedir) $(locallibstatedir) $(locallibstatedir)/${I2PD} $(runstatedir)
+	@ln -sf $(datarootdir)/${I2PD}/certificates $(locallibstatedir)/${I2PD}/certificates
+	@ln -sf $(sysconfdir)/${I2PD}/tunnels.conf.d $(locallibstatedir)/${I2PD}/tunnels.d
+	@ln -sf $(sysconfdir)/${I2PD}/i2pd.conf $(locallibstatedir)/${I2PD}/i2pd.conf
+	@ln -sf $(sysconfdir)/${I2PD}/tunnels.conf $(locallibstatedir)/${I2PD}/tunnels.conf
